Queue for matches (#52)
